--- a/2x35.html
+++ b/2x35.html
@@ -1197,6 +1197,11 @@ text-align: center;
 <input type="text" id="repPhone" autocomplete="off" placeholder="הזן מספר לחיפוש" style="width: 100%;">
 </div>
 
+<div style="margin-bottom: 10px;">
+    <span style="font-size: 0.9em;">מספר רכב (אופציונלי):</span>
+    <input type="text" id="repCar" autocomplete="off" placeholder="הזן מספר רכב..." style="width: 100%;">
+  </div>
+
 <button onclick="printRangeReport()" style="width: 100%; background: var(--accent-gold); border: none; color: white; padding: 8px; border-radius: 4px; cursor: pointer; font-weight: bold;">
 🔍 אתר והדפס תורים
 </button>
