--- a/2x35.html
+++ b/2x35.html
@@ -1147,10 +1147,41 @@ text-align: center;
 <div id="calendar"></div>
 
 <div style="margin-top: auto; padding-top: 15px; border-top: 1px solid var(--border-color);">
-<h4 style="margin: 0 0 10px 0; color: var(--text-muted); text-align: center; font-size: 1em;">הגדרות מערכת</h4>
-<div style="margin-bottom: 10px;"><label style="font-size: 0.85em; display:block; margin-bottom:3px;">כותרת ליומן:</label><input type="text" id="calendarTitleSetting" placeholder="לדוגמה: תור למספרה" style="width:100%; text-align:right;"></div>
-<div style="margin-bottom: 5px;"><label style="font-size: 0.85em; display:block; margin-bottom:3px;">שמירת היסטוריה (ימים):</label><input type="number" id="historyDays" value="30" style="width:100%; text-align:center;"></div>
-<button onclick="saveSystemSettings()" style="width: 100%; background:var(--accent-blue); border:none; padding:8px; color:white; border-radius:4px; cursor:pointer; font-weight:bold;">שמור הגדרות מערכת</button>
+    <h4 style="margin: 0 0 10px 0; color: var(--text-muted); text-align: center; font-size: 1em;">הגדרות מערכת</h4>
+    
+    <div style="margin-bottom: 10px;">
+        <label style="font-size: 0.85em; display:block; margin-bottom:3px;">כותרת ליומן:</label>
+        <input type="text" id="calendarTitleSetting" placeholder="לדוגמה: תור למספרה" style="width:100%; text-align:right;">
+    </div>
+    <div style="margin-bottom: 15px;">
+        <label style="font-size: 0.85em; display:block; margin-bottom:3px;">שמירת היסטוריה (ימים):</label>
+        <input type="number" id="historyDays" value="30" style="width:100%; text-align:center;">
+    </div>
+
+    <div style="margin-bottom: 15px; border-top: 1px dashed #ccc; padding-top: 10px;">
+        <label style="font-size: 0.85em; font-weight:bold; display:block; margin-bottom:5px;">ניהול סוגי טיפולים:</label>
+        
+        <div style="display:flex; gap:5px; margin-bottom:8px;">
+            <input type="text" id="newTreatmentName" placeholder="סוג טיפול חדש..." 
+                   style="flex:1; padding:5px; border:1px solid #ccc; border-radius:4px; font-size:0.9em;">
+            <button onclick="addTreatmentType()" 
+                    style="background:var(--accent-gold, #f59e0b); color:white; border:none; padding:5px 10px; border-radius:4px; cursor:pointer; font-weight:bold; font-size:0.9em;">
+                +
+            </button>
+        </div>
+
+        <div style="display:flex; gap:5px;">
+            <select id="deleteTreatmentSelect" style="flex:1; padding:5px; border:1px solid #ccc; border-radius:4px; background:#f9f9f9; font-size:0.9em;">
+                <option value="">בחר להסרה...</option>
+            </select>
+            <button onclick="removeTreatmentType()" 
+                    style="background:#ef4444; color:white; border:none; padding:5px 10px; border-radius:4px; cursor:pointer; font-weight:bold; font-size:0.9em;">
+                🗑️
+            </button>
+        </div>
+    </div>
+    <button onclick="saveSystemSettings()" style="width: 100%; background:var(--accent-blue); border:none; padding:8px; color:white; border-radius:4px; cursor:pointer; font-weight:bold;">שמור הגדרות מערכת</button>
+</div>
 </div>
 </div>
 
