--- a/2x35.html
+++ b/2x35.html
@@ -1000,7 +1000,7 @@ button.history-btn.active {
     <input type="text" id="bookCarNumber" placeholder="הכנס מספר רכב" autocomplete="off">
 </div>
 
-<div class="form-group">
+<div class="form-group" style="margin-bottom: 25px;">
     <label>סוג טיפול:</label>
     <select id="bookTreatmentType" style="width:100%; padding:10px;">
         <option value="" disabled selected>בחר סוג טיפול</option>
