--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <!-- <meta property="og:description" content=""> -->
 <meta property="og:type" content="website">
 <!-- ************************************************החלפה***************************************** -->
-<meta property="og:url" content="https://my-torimapp-meneg.netlify.app/" />
-<meta property="og:image" content="https://my-torimapp-meneg.netlify.app/icon1.png" />
+<meta property="og:url" content="https://mosheal7700-sys.github.io/car-torim-meng/" />
+<meta property="og:image" content="https://mosheal7700-sys.github.io/car-torim-meng/icon1.png" />
 <!-- ************************************************החלפה*******my-torimapp-meneg********************************** -->
 <!-- חובה במיוחד -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,3 +16,4 @@
 <script>
 window.location.href = "admin-login.html";
 </script>
+
