--- a/admin-login.html
+++ b/admin-login.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚗</text></svg>">
 
 <script>
 window.addEventListener('beforeinstallprompt', function(e) {
@@ -288,4 +289,5 @@ document.getElementById("password").addEventListener("keypress", function(event)
 </script>
 
 </body>
+
 </html>
