Change booked slot text color in dark mode

--- a/2x35.html
+++ b/2x35.html
@@ -353,7 +353,7 @@ body.light-mode .slot.free:hover { background: #ecfdf5; }
   border: 1px solid #2563eb;
 }
 .slot.booked strong { color: #93c5fd; }
-.slot.booked div { color: #dbeafe; }
+.slot.booked div { color: #a6f7fd; }
 
 /* תור מוזמן - תיקון למצב בהיר */
 body.light-mode .slot.booked {
