Change booked slot background color in light mode

--- a/2x35.html
+++ b/2x35.html
@@ -357,7 +357,7 @@ body.light-mode .slot.free:hover { background: #ecfdf5; }
 
 /* תור מוזמן - תיקון למצב בהיר */
 body.light-mode .slot.booked {
-  background: #dbeafe; /* תכלת בהיר */
+  background: #94c2ff; /* תכלת בהיר */
   border: 1px solid #509fff;
   color: inherit;
 }
